edits to html and css plus downloaded a UNC logo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!DOCTYPE html>
-<head>
-<link rel="favicon" href="mj.ico" type="image/x-icon"></link>
+<!--DOCTYPE html-->
+<head class="favicon"> 
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="icon" type="image" href="https://raw.githubusercontent.com/jgwould/mj_tributepage/master/mj.ico">
 <title>Michael Jordan Tribute Page</title>
 </head>
 
-<div class="container"></div>
-<h1 class="title">Michael Jordan</h1>
-<h3 class="quote">I've missed more than 9000 shots in my career. I've lost almost 300 games. 26 times, I've been trusted to take the game winning shot and missed. I've failed over and over and over again in my life. And that is why I succeed.</h3>
+<div class="container">
+		<h1 class="title">Michael Jordan</h1>
+		<h3 class="quote">"I've missed more than 9000 shots in my career. I've lost almost 300 games. 26 times, I've been trusted to take the game winning shot and missed. I've failed over and over and over again in my life. And that is why I succeed."</h3>
+	<div class="img"><img src="https://raw.githubusercontent.com/jgwould/mj_tributepage/master/mj_dunk_pic.jpg"></link>Michael Jordan at home in Chicago during the 1988 Slam Dunk contest, where, with this dunk, he defeated Dominique Wilkins to defend the Slam Dunk crown.</div>
+
+<h2>Here's a timeline of Jordan's life:</h2>
+<ul class="accomplishments">
+	<li>wake up</li>
+	<li>eat breakfast</li>
+	<li>go to school</li>
+	<li>class</li>
+	<li>have lunch</li>
+	<li>go to the gym</li>
+	<li>class</li>
+	<li>come home</li>
+	<li>eat</li>
+	<li>read</li>
+	<li>fuck</li>
+	<li>go to sleep</li>
+
+</div>
+
+
