edits to html and css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 
 <div class="container">
-		<h1 class="title">Michael Jordan</h1>
-		<h3 class="quote">"I've missed more than 9000 shots in my career. I've lost almost 300 games. 26 times, I've been trusted to take the game winning shot and missed. I've failed over and over and over again in my life. And that is why I succeed."</h3>
-	<div class="img"><img src="https://raw.githubusercontent.com/jgwould/mj_tributepage/master/mj_dunk_pic.jpg"></link>Michael Jordan at home in Chicago during the 1988 Slam Dunk contest, where, with this dunk, he defeated Dominique Wilkins to defend the Slam Dunk crown.</div>
-
-<h2>Here's a timeline of Jordan's life:</h2>
+	<h1 class="title">Michael Jordan</h1>
+	<div class="unc_logo"><img src="https://raw.githubusercontent.com/jgwould/mj_tributepage/master/unc_logo.png" style="max-width: 50px; max-height: 70px; border-radius: 10px;"></div>
+	<h3 class="quote">"I've missed more than 9000 shots in my career. I've lost almost 300 games. 26 times, I've been trusted to take the game winning shot and missed. I've failed over and over and over again in my life. And that is why I succeed."</h3>
+	<div class="background" style="max-width: 100%; max-height: 100%;">
+		<div class="dunk"><img src="https://raw.githubusercontent.com/jgwould/mj_tributepage/master/mj_dunk_pic.jpg" style="max-width:90%; max-height:50%;border-radius: 10px;"></img></div>
+		<div class="dunk_text">Michael Jordan at home in Chicago during the 1988 Slam Dunk contest, where, with this dunk, he defeated Dominique Wilkins to defend the Slam Dunk crown.</div>
+	</div>
+<h2 class="timeline">Here's a timeline of Jordan's life:</h2>
 <ul class="accomplishments">
 	<li>wake up</li>
 	<li>eat breakfast</li>
