final edits to mj tribute page

--- a/index.html
+++ b/index.html
@@ -15,19 +15,34 @@
 	</div>
 <h2 class="timeline">Here's a timeline of Jordan's life:</h2>
 <ul class="accomplishments">
-	<li>wake up</li>
-	<li>eat breakfast</li>
-	<li>go to school</li>
-	<li>class</li>
-	<li>have lunch</li>
-	<li>go to the gym</li>
-	<li>class</li>
-	<li>come home</li>
-	<li>eat</li>
-	<li>read</li>
-	<li>fuck</li>
-	<li>go to sleep</li>
+	<li> 1963 - Michael Jordan is born in Brooklyn, New York; family relocates to Wilmington, NC</li>
+	<li> 1978 - Jordan goes out for the Varsity basketball team as a sophomore, but he doesn't make it</li>
+	<li> 1979 - Jordan works really hard over the summer and grows 4 inches</li>
+	<li> 1981 - During his senior year, Jordan averages 29 points 11 rebounds and 10 assists</li>
+	<li> 1981 - He is heavily recruited by many powerhouse basketball schools but he decides to attend the University of North Carolina</li>
+	<li> 1982 - As a frehman, Jordan drains a game winning shot in the NCAA chamionship against Patrick Ewing and Georgetown; Jordan would later go on to say that this feat was a major turning point in his basektball career</li>
+	<li> 1982 - Awarded Atlantic Coast Conference Freshman of the Year Award</li>
+	<li> 1983 - First Team NCAA All-American</li>
+	<li> 1984 - First Team NCAA All American</li>
+	<li> 1984 - Won the Naismith and the Wooden College Player of the Year awards</li>
+	<li> 1984 - Michael leaves UNC a year early to enter the NBA draft; The Chicago Bulls draft him with the third overall pick</li>
+	<li> Won the gold medal in the 1984 Summer Olympics with Team USA</li>
+	<li> 1985 - NBA Rookie of the Year</li>
+	<li> 1988 - NBA Defensive Player of the Year</li>
+	<li> 1991 - Led the Chicago Bulls to their first ever NBA title while being crowned Finals MVP</li>
+	<li> 1992 - Led the Bulls to their second NBA title while acheiving MVP honors averaging over 35 points per game</li>
+	<li> 1992 - Won the gold medal in the 1992 Summer Olympics as a part of the infamous USA Basketball "Dream Team"</li>
+	<li> 1993 - Led Chicago to their third straight NBA title while being crowned Finals MVP with averaging 41 points per game</li>
+	<li> 1993 - MJ retires from basketball to pursue baseball</li>
+	<li> 1995 - After an unsuccessful baseball career, Jordan returns to basketball</li>
+	<li> 1996 - Jordan led the Bulls to their fourth NBA Finals title while achieving NBA MVP honors for the fourth time averaging 27 points</li>
+	<li> 1997 - MJ led the Bulls to their fifth NBA title while attaining the Finals MVP award averaging 32 points</li>
+	<li> 1998 - In Jordan's last season with the Bulls, he led his team to their sixth NBA title while again achieving NBA Finals MVP trophy averaging 33 points</li>
+	<li> 1998 - Jordan retires for a second time from the NBA</li>
+	<li> 2001-2003 - Comes out of retirement again to play with the Washington Wizards for two seasons</li>
+	<li> 2006- present - Managing member of Basketball Operations for the Charlotte Hornets</li>
 
+	<h3 class ="footer">To learn more about Michael Jordan and his accomplishments, check out his wikipedia page, <a rel="gotowiki" href="https://en.wikipedia.org/wiki/Michael_Jordan">here.</a></h3>
 </div>
 
 
